fixed colorbar size on small screen devices

--- a/examples/css/screen.css
+++ b/examples/css/screen.css
@@ -93,7 +93,7 @@ div#right {
 /* Mobile */
 @media screen and (max-width: 736px) {
     #colors {
-        width: 86%;
+        width: 84%;
         margin-right: 0;
     }
     .buttonContainer {
